testcases/negative/missing-at.otk
OFFICETALK/1.0
DOCTYPE word

SET "Hello"
